--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "ras-react-component": "^1.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-charts": "^4.0.0",
+    "react-minimal-pie-chart": "^8.3.0",
     "react-scripts": "5.0.1",
     "web-vitals": "^2.1.4"
   },
